--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </iframe>
 
       <div class="slideshow">
-        <img id="slide" src="Imagem1.jpg" alt="Imagem fofa" />
+        <img id="slide" src="./Imagens/Imagem8.avif" alt="Imagem fofa" />
         <button onclick="nextImage()">Clique aqui</button>
       </div>
       
