--- a/index.html
+++ b/index.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amohzuxo🥰🌻</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="heart-container"></div>
-    <main>
-      <h1>Para o grande amor da minha vida!</h1>
-      <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/track/70HrtYu3IBWpBIrPLEkcuP?utm_source=generator" 
-    width="100%" height="80" frameBorder="0" 
-    allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-    loading="lazy">
-</iframe>
 
-      <div class="slideshow">
-        <img id="slide" src="./Imagens/Imagem8.avif" alt="Imagem fofa" />
-        <button onclick="nextImage()">Clique aqui</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amohzuxo🥰🌻</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="heart-container"></div>
+  <main>
+    <h1>Para o grande amor da minha vida!</h1>
+    <iframe style="border-radius:12px"
+      src="https://open.spotify.com/embed/track/70HrtYu3IBWpBIrPLEkcuP?utm_source=generator" width="100%" height="80"
+      frameBorder="0" allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
+
+    <div class="slideshow">
+      <img id="slide" src="./Imagens/Imagem8.avif" alt="Imagem fofa" />
+      <button onclick="nextImage()">Clique aqui</button>
+
+      <h1>Faltam apenas!</h1>
+      <div id="contador">
+        Carregando...
+
       </div>
-      
-Karol, meu amor.
+      <h1>❤️</h1>
+      <hr>
 
-Te amo desde o dia em que meu coração tropeçou no teu sorriso — e olha que isso já faz um tempinho… desde 26/08/2021, pra ser exato. Mas, se for contar em batidas do coração, já são milhões, todas dançando no mesmo ritmo: o teu.
+    </div>
 
-Lembro como se fosse agora do comecinho… quando cada mensagem sua fazia meu estômago dar voltinhas e meu rosto virar um pôr do sol de tanto corar. Desde então, você virou minha melhor memória, meu lugar favorito, meu jeitinho de ver o mundo com mais cor.
+    Karol, meu amor.
 
-Nosso amor tem cheirinho de abraço demorado e gosto de “fica mais um pouquinho”. É feito de detalhes: teu jeito de me olhar, o som da tua risada, as bobeirinhas que só a gente entende. Eu guardo tudo como quem coleciona estrelas — e você, Karol, é a constelação inteira.
+    Te amo desde o dia em que meu coração tropeçou no teu sorriso — e olha que isso já faz um tempinho… desde
+    26/08/2021, pra ser exato. Mas, se for contar em batidas do coração, já são milhões, todas dançando no mesmo ritmo:
+    o teu.
 
-Te amo há 26/08/2021, mas se for ser sincero… acho que meu coração já te reconhecia de antes.  
-E ele vai continuar te amando em cada amanhã que a vida nos der.
+    Lembro como se fosse agora do comecinho… quando cada mensagem sua fazia meu estômago dar voltinhas e meu rosto virar
+    um pôr do sol de tanto corar. Desde então, você virou minha melhor memória, meu lugar favorito, meu jeitinho de ver
+    o mundo com mais cor.
 
-Com todo meu amor (e mais um tantinho que nem cabe aqui),  
-Teu.
-        
-    </main>
-    <script src="slider.js"></script>
-    <script src="hearts.js"></script>
-  </body>
+    Nosso amor tem cheirinho de abraço demorado e gosto de “fica mais um pouquinho”. É feito de detalhes: teu jeito de
+    me olhar, o som da tua risada, as bobeirinhas que só a gente entende. Eu guardo tudo como quem coleciona estrelas —
+    e você, Karol, é a constelação inteira.
+
+    Te amo há 26/08/2021, mas se for ser sincero… acho que meu coração já te reconhecia de antes.
+    E ele vai continuar te amando em cada amanhã que a vida nos der.
+
+    Com todo meu amor (e mais um tantinho que nem cabe aqui),
+    Teu.
+
+    <div class="slideshow">
+
+
+    </div>
+  </main>
+  <script src="slider.js"></script>
+  <script src="hearts.js"></script>
+  <script src="contador.js"></script>
+</body>
+
 </html>
